--- a/src/components/RestaurantsDetail/Info/Offers/Offers.css
+++ b/src/components/RestaurantsDetail/Info/Offers/Offers.css
@@ -1,119 +1,120 @@
 .restaurant-detail__info-offers {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-item-align: start;
-  align-self: flex-start;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-item-align: start;
+	align-self: flex-start;
 }
 
 .restaurant-detail__info-offers .card {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 0.8rem 1.5rem 0.8rem 3rem;
-  border-radius: 5px;
-  color: #fff;
-  position: relative;
+	height: -webkit-max-content;
+	height: -moz-max-content;
+	height: max-content;
+	width: -webkit-max-content;
+	width: -moz-max-content;
+	width: max-content;
+	padding: 0.3rem 1rem 0.5rem 3rem;
+	border-radius: 10px;
+	color: #000;
+	position: relative;
 }
 
 .restaurant-detail__info-offers .card {
-  background-color: #999;
-  overflow: hidden;
+	background-color: #e3e7e0;
+	overflow: hidden;
 }
 
 .restaurant-detail__info-offers .card:first-of-type {
-  margin-right: 10px;
+	margin-right: 10px;
 }
 
 .restaurant-detail__info-offers .card:first-of-type .offers__title {
-  background-color: #e23744;
+	background-color: #e23744;
 }
 
 .restaurant-detail__info-offers .card:last-of-type .offers__title {
-  background-color: #84c225;
+	background-color: #84c225;
 }
 
 .offer_container {
-  -webkit-transform: rotate(270deg);
-  -ms-transform: rotate(270deg);
-  transform: rotate(270deg);
-  position: absolute;
-  left: -35px;
-  top: 35px;
+	-webkit-transform: rotate(270deg);
+	-ms-transform: rotate(270deg);
+	transform: rotate(270deg);
+	position: absolute;
+	left: -35px;
+	top: 30px;
 }
 
 .offers__title {
-  margin: 0;
-  padding: 0.25rem 1rem;
-  bottom: 25px;
-  font-size: 1.6rem;
-  font-weight: 700;
-  /* -webkit-transform: rotate(270deg);
+	margin: 0;
+	padding: 0.25rem 1rem;
+	bottom: 25px;
+	font-size: 1.6rem;
+	font-weight: 700;
+	/* -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
   transform: rotate(270deg); */
-  margin: 0;
+	margin: 0;
+	color: #fff;
 }
 
 .restaurant-detail__info-offers .card-title {
-  font-size: 1rem;
+	font-size: 1rem;
 }
 
 .restaurant-detail__info-offers .card-text {
-  margin-bottom: 0.25rem;
+	margin-bottom: 0.25rem;
 }
 
 .restaurant-detail__info-offers p {
-  font-size: 0.7rem;
+	font-size: 0.7rem;
 }
 
 @media (max-width: 960px) {
-  .restaurant-detail__info-offers {
-    margin: 0;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-  }
+	.restaurant-detail__info-offers {
+		margin: 0;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
+		flex-direction: column;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		align-items: center;
+		-webkit-box-pack: center;
+		-ms-flex-pack: center;
+		justify-content: center;
+	}
 
-  .restaurant-detail__info-offers .card {
-    padding: 0.8rem 1rem 0.8rem 2rem;
-  }
-  .restaurant-detail__info-offers .card:first-of-type {
-    margin: 0 0 5px 0;
-  }
+	.restaurant-detail__info-offers .card {
+		padding: 0.8rem 1rem 0.8rem 2rem;
+	}
+	.restaurant-detail__info-offers .card:first-of-type {
+		margin: 0 0 5px 0;
+	}
 
-  .offers__container {
-    font-size: 0.5rem;
-  }
+	.offers__container {
+		font-size: 0.5rem;
+	}
 }
 
 @media (max-width: 640px) {
-  .restaurant-detail__info-offers .card {
-    padding-left: 3rem;
-  }
-  .restaurant-detail__info-offers .card:first-of-type {
-    margin: 0 0 5px 0;
-  }
+	.restaurant-detail__info-offers .card {
+		padding-left: 3rem;
+	}
+	.restaurant-detail__info-offers .card:first-of-type {
+		margin: 0 0 5px 0;
+	}
 
-  .restaurant-detail__info-offers .card-title {
-    font-size: 0.8rem;
-  }
+	.restaurant-detail__info-offers .card-title {
+		font-size: 0.8rem;
+	}
 
-  .restaurant-detail__info-offers p {
-    font-size: 0.5rem;
-  }
+	.restaurant-detail__info-offers p {
+		font-size: 0.5rem;
+	}
 
-  .offers__title {
-    font-size: 1.2rem;
-    padding: 0.25rem 1.5rem;
-  }
+	.offers__title {
+		font-size: 1.2rem;
+		padding: 0.25rem 1.5rem;
+	}
 }
