--- a/src/components/RestaurantsDetail/Menu/Cart/CartCard/CartCard.css
+++ b/src/components/RestaurantsDetail/Menu/Cart/CartCard/CartCard.css
@@ -1,114 +1,114 @@
 .cart {
-  -webkit-box-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  border-left: 2px solid #c4c4c4;
-  height: 30rem;
-  padding-left: 1rem;
+	-webkit-box-flex: 3;
+	-ms-flex: 3;
+	flex: 3;
+	border-left: 3px solid #fab84c;
+	height: 30rem;
+	padding-left: 1rem;
 }
 
 .cart-card {
-  background-color: #fff;
-  border-radius: 8px;
-  -webkit-box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.225);
-  box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.225);
-  margin: 0 10px 10px;
-  padding: 0;
-  overflow: hidden;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+	background-color: #fff;
+	border-radius: 8px;
+	-webkit-box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.225);
+	box-shadow: 2px 2px 8px rgb(0, 0, 0, 0.225);
+	margin: 0 10px 10px;
+	padding: 0;
+	overflow: hidden;
+	height: -webkit-max-content;
+	height: -moz-max-content;
+	height: max-content;
 }
 
 .checkout {
-  margin-bottom: 3.5rem;
+	margin-bottom: 3.5rem;
 }
 
 .checkout .cart-card {
-  border-radius: none;
-  margin: 0;
+	border-radius: none;
+	margin: 0;
 }
 
 .cart-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  font-size: 1.6rem;
-  padding: 1rem;
-  border-bottom: 1px solid #000;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: start;
+	-ms-flex-pack: start;
+	justify-content: flex-start;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	font-size: 1.6rem;
+	padding: 1rem;
+	border-bottom: 1px solid #000;
 }
 
 .cart-info__logo {
-  margin-right: 1.2rem;
-  color: #fff;
-  background-color: #fac05e;
-  border-radius: 50%;
-  height: 2.5rem;
-  width: 2.5rem;
-  text-align: center;
+	margin-right: 1.2rem;
+	color: #fff;
+	background-color: #fac05e;
+	border-radius: 50%;
+	height: 2.5rem;
+	width: 2.5rem;
+	text-align: center;
 }
 
 .cart-info__heading {
-  font-weight: 700;
-  font-size: 1.5rem;
+	font-weight: 700;
+	font-size: 1.5rem;
 }
 
 .cart-info__main {
-  margin: 0.8rem;
+	margin: 0.8rem;
 }
 
 .cart-info__restro-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: start;
+	-ms-flex-pack: start;
+	justify-content: flex-start;
 }
 
 .cart-info__img-container {
-  height: 3rem;
-  width: 3rem;
-  background-color: #c4c4c4;
+	height: 3rem;
+	width: 3rem;
+	background-color: #c4c4c4;
 }
 
 .cart-info__restro-info h1,
 .cart-info__restro-info p {
-  font-size: 0.9rem;
-  margin-left: 5px;
+	font-size: 0.9rem;
+	margin-left: 5px;
 }
 
 .cart-info__restro-info h1 {
-  font-weight: 900;
-  margin-top: 1px;
-  margin-bottom: 1px;
+	font-weight: 900;
+	margin-top: 1px;
+	margin-bottom: 1px;
 }
 
 .checkout-cart__btn {
-  background-color: #f7c12b;
-  padding: 1rem;
-  border: none;
-  margin-bottom: 20px;
-  border-radius: 8px;
-  font-size: 1rem;
-  font-weight: 800;
-  height: 1.5rem;
-  width: 50%;
+	background-color: #f7c12b;
+	padding: 1rem;
+	border: none;
+	margin-bottom: 20px;
+	border-radius: 8px;
+	font-size: 1rem;
+	font-weight: 800;
+	height: 1.5rem;
+	width: 50%;
 }
 
 .checkout-actions {
-  text-align: center;
-  padding: 0 3rem;
+	text-align: center;
+	padding: 0 3rem;
 }
 
 @media (max-width: 960px) {
-  .cart {
-    display: none;
-  }
+	.cart {
+		display: none;
+	}
 }
