--- a/src/components/RestaurantsDetail/Cover/Cover.css
+++ b/src/components/RestaurantsDetail/Cover/Cover.css
@@ -1,68 +1,70 @@
 .restaurant-detail__cover {
-  margin-top: -2rem;
-  height: 25rem;
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 1rem;
+	margin-top: -2rem;
+	height: 25rem;
+	position: relative;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	gap: 1rem;
+	padding: 1rem 5rem;
 }
 
 .restaurant-img-container.maincover {
-  grid-column: 1 / 4;
-  grid-row: 1/3;
+	grid-column: 1 / 4;
+	grid-row: 1/3;
 }
 
 .restaurant-img-container {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .restaurant-detail__cover img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
 }
 
 .rating-badge {
-  position: absolute;
-  top: 1rem;
+	position: absolute;
+	top: 2rem;
+	left: 5.5rem;
 }
 
 .rating-badge {
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: #fff;
-  background: #509807;
-  border-radius: 20px;
-  padding: 0 1rem;
-  margin: 0.1rem;
+	font-size: 1.2rem;
+	font-weight: 700;
+	color: #fff;
+	background: #509807;
+	border-radius: 20px;
+	padding: 0 1rem;
+	margin: 0.1rem;
 }
 
 .rating-badge svg {
-  transform: translateY(-2.5px);
+	transform: translateY(-2.5px);
 }
 
 @media (max-width: 960px) {
-  .restaurant-detail__cover {
-    display: block;
-    overflow: hidden;
-    margin-top: -3.5rem;
-    margin-bottom: 0;
-  }
+	.restaurant-detail__cover {
+		display: block;
+		overflow: hidden;
+		margin-top: -3.5rem;
+		margin-bottom: 0;
+	}
 
-  .restaurant-img-container {
-    display: none;
-  }
+	.restaurant-img-container {
+		display: none;
+	}
 
-  .maincover {
-    display: block;
-    width: 100%;
-    overflow: hidden;
-  }
+	.maincover {
+		display: block;
+		width: 100%;
+		overflow: hidden;
+	}
 }
 
 @media (max-width: 640px) {
-  .restaurant-detail__cover {
-    height: 12.5rem;
-  }
+	.restaurant-detail__cover {
+		height: 12.5rem;
+	}
 }
