--- a/src/components/RestaurantsDetail/Info/Info.css
+++ b/src/components/RestaurantsDetail/Info/Info.css
@@ -1,24 +1,25 @@
 .restaurant-detail__info-information {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  height: 6rem;
-  margin-top: 1rem;
-  cursor: pointer;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	height: 6rem;
+	margin-top: 1rem;
+	cursor: pointer;
+	padding: 0 5rem;
 }
 
 @media (max-width: 960px) {
-  .restaurant-detail__info-information {
-    height: -webkit-max-content;
-    height: -moz-max-content;
-    height: max-content;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-  }
+	.restaurant-detail__info-information {
+		height: -webkit-max-content;
+		height: -moz-max-content;
+		height: max-content;
+		-ms-flex-pack: distribute;
+		justify-content: space-around;
+	}
 }
