--- a/src/components/RestaurantsDetail/Menu/Tabs/Tabs.css
+++ b/src/components/RestaurantsDetail/Menu/Tabs/Tabs.css
@@ -6,52 +6,52 @@
 */
 
 .menu-list__tabs {
-  border-radius: 25px;
-  background-color: #fff;
-  width: 80%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-shadow: 0 5px 12px rgb(0, 0, 0, 0.2);
-  box-shadow: 0 5px 12px rgb(0, 0, 0, 0.2);
-  margin-bottom: 1.5rem;
+	border-radius: 25px;
+	background-color: #fff;
+	width: 50%;
+	margin: 30px auto;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-shadow: 0 5px 12px rgb(0, 0, 0, 0.2);
+	box-shadow: 0 5px 12px rgb(0, 0, 0, 0.2);
+	margin-bottom: 30px;
 }
 
 .menu-list__tabs div {
-  padding: 1rem;
-  border: 2px solid #fff;
-  border-radius: 25px;
-  width: 100%;
-  font-size: 1rem;
-  font-weight: 600;
-  color: #bababa;
-  text-align: center;
+	padding: 1rem;
+	border: 2px solid #fff;
+	border-radius: 25px;
+	width: 100%;
+	font-size: 1rem;
+	font-weight: 600;
+	color: #bababa;
+	text-align: center;
 }
 
 .menu-list__tabs svg {
-  font-size: 1.2rem;
+	font-size: 1.2rem;
 }
 
 .menu-list__tabs div:hover,
 .menu-list__tabs .active {
-  border-color: #f7c12b;
-  color: #000;
-  background-color: #fffcde;
+	border-color: #f7c12b;
+	color: #000;
+	background-color: #fffcde;
 }
 
 @media (max-width: 640px) {
-  .menu-list__tabs {
-    width: 95%;
-  }
+	.menu-list__tabs {
+		width: 95%;
+	}
 
-  .menu-list__tabs div {
-    font-size: 1rem;
-  }
+	.menu-list__tabs div {
+		font-size: 1rem;
+	}
 }
