--- a/src/components/css/SpecialOffer.css
+++ b/src/components/css/SpecialOffer.css
@@ -1,55 +1,63 @@
 .specialoffer-img {
-  /* height: 30%; */
-  width: 100%;
-  border-radius: 12px;
-  /* margin: auto auto; */
+	/* height: 30%; */
+	width: 100%;
+	border-radius: 12px;
+	/* margin: auto auto; */
 }
 .mx-auto {
-  margin: auto;
+	margin: auto;
 }
 .specialOffer-slider {
-  padding-left: 0rem;
-  margin-bottom: 5rem;
-  margin-left: -3rem;
-  margin-right: -3rem;
+	padding-left: 0rem;
+	/* margin-bottom: 5rem; */
+	/* margin-left: -3rem;
+	margin-right: -3rem; */
 }
 .specialOffer-slider2 {
-  padding-left: 15rem;
-  padding-right: 25rem;
-  margin-bottom: 5rem;
+	padding-left: 15rem;
+	padding-right: 25rem;
+	/* margin-bottom: 5rem; */
+}
+
+.cuisines-header {
+	font-family: 'Segoe UI';
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 32px;
+	letter-spacing: 0.075em;
 }
 
 .slider {
-  margin-bottom: 5rem;
-  margin-top: 5rem;
+	margin-bottom: 2rem;
+	margin-top: 2rem;
 }
 .slider-gray-bg {
-  background-color: rgb(248, 248, 248);
-  padding: 2rem;
+	background-color: rgb(248, 248, 248);
+	padding: 2rem;
 }
 
 @media (max-width: 600px) {
-  .slider {
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-  }
-  .specialOffer-slider {
-    margin-bottom: 2rem;
-    overflow: hidden;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin-left: 0;
-    margin-right: 0;
-  }
-  .specialOffer-slider2 {
-    padding-left: 0rem;
-    padding-right: 1rem;
-    margin-bottom: 3rem;
-  }
-  .specialoffer-img {
-    width: 100%;
-  }
-  .center {
-    text-align: center;
-  }
+	.slider {
+		margin-bottom: 2rem;
+		margin-top: 2rem;
+	}
+	.specialOffer-slider {
+		margin-bottom: 2rem;
+		overflow: hidden;
+		-webkit-box-sizing: border-box;
+		box-sizing: border-box;
+		margin-left: 0;
+		margin-right: 0;
+	}
+	.specialOffer-slider2 {
+		padding-left: 0rem;
+		padding-right: 1rem;
+		margin-bottom: 3rem;
+	}
+	.specialoffer-img {
+		width: 100%;
+	}
+	.center {
+		text-align: center;
+	}
 }
