--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -6,567 +6,579 @@
 */
 
 .main-heading-font {
-  font-size: var(--xxl-font);
+	font-size: var(--xxl-font);
 }
 
 .heading-font {
-  font-size: var(--l-font);
+	font-size: var(--l-font);
 }
 a {
-  text-decoration: none;
-  color: black;
+	text-decoration: none;
+	color: black;
 }
 
 .noraml-heading-font {
-  font-size: var(--m-font);
+	font-size: var(--m-font);
 }
 
 .normal-font {
-  font-size: var(--sm-font);
-  /* box-shadow: 0px -5px 10px rgb(211, 209, 209); */
+	font-size: var(--sm-font);
+	/* box-shadow: 0px -5px 10px rgb(211, 209, 209); */
 }
 
 .small-font {
-  font-size: var(--xs-font);
+	font-size: var(--xs-font);
 }
 
 .colour-grey {
-  color: #999999;
+	color: #999999;
 }
 
 .center {
-  text-align: center;
+	text-align: center;
 }
 
 ul li {
-  padding: 1rem 0.5rem;
+	padding: 1rem 0.5rem;
 }
 
 /* -------------footer-css----------- */
 footer {
-  -webkit-box-shadow: -1px 0px 8px rgb(235, 233, 233);
-  box-shadow: -1px 0px 8px rgb(235, 233, 233);
-  padding-top: 3rem;
-  background-color: #012933;
+	-webkit-box-shadow: -1px 0px 8px rgb(235, 233, 233);
+	box-shadow: -1px 0px 8px rgb(235, 233, 233);
+	padding-top: 3rem;
+	background-color: #012933;
 }
 
 .food-background {
-  /* padding: 1rem; */
-  min-width: 4rem;
-  min-height: 12rem;
-  background-image: url('/src/images/footerlogo.png');
-  background-image: url('/src/images/footerlogo.png');
-  background-image: url('/src/images/footerlogo.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* opacity: 0.5; */
+	/* padding: 1rem; */
+	min-width: 4rem;
+	min-height: 12rem;
+	background-image: url('/src/images/footerlogo.png');
+	background-image: url('/src/images/footerlogo.png');
+	background-image: url('/src/images/footerlogo.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	/* opacity: 0.5; */
 }
 .link-head {
-  font-size: 1.5rem;
-  color: #fab84c;
-  -webkit-box-shadow: none;
-  box-shadow: none;
+	font-size: 1.5rem;
+	color: #fab84c;
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 .company-links {
-  list-style: none;
-  color: #999999;
-  text-align: center;
-  padding: 0;
+	list-style: none;
+	color: #999999;
+	text-align: center;
+	padding: 0;
 }
 .for-you-links {
-  list-style: none;
-  color: #999999;
-  text-align: center;
+	list-style: none;
+	color: #999999;
+	text-align: center;
 }
 .for-you-links > li,
 .company-links > li {
-  margin-bottom: 0.2rem;
+	margin-bottom: 0.2rem;
 }
 .download-button-wrapper {
-  text-align: center;
-  padding: 3rem 0rem 0rem 0rem;
+	text-align: center;
+	padding: 3rem 0rem 0rem 0rem;
 }
 .download-btn {
-  line-height: 0.8rem;
-  padding: 1rem 3rem;
-  color: white;
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin-bottom: 2rem;
+	line-height: 0.8rem;
+	padding: 1rem 3rem;
+	color: white;
+	font-size: 1.2rem;
+	font-weight: 600;
+	margin-bottom: 2rem;
 }
 
 /* ------------listingcards-------------- */
 
 /* ---------------trolly----------------- */
 .main-container {
-  width: 100%;
+	width: 100%;
 }
 
 .tab-selection-container {
-  border-bottom: 0.1px solid #c4c4c4;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  position: relative;
+	border-bottom: 0.1px solid #c4c4c4;
+	width: -webkit-fit-content;
+	width: -moz-fit-content;
+	width: fit-content;
+	position: relative;
 }
 
 .tab-selection-container::before {
-  content: '';
-  display: block;
-  width: 2rem;
-  height: 0.6rem;
-  background-color: #f8eddb;
-  position: absolute;
-  bottom: 0;
-  border-radius: 0.5rem 0.5rem 0 0;
+	content: '';
+	display: block;
+	width: 2rem;
+	height: 0.6rem;
+	background-color: #f8eddb;
+	position: absolute;
+	bottom: 0;
+	border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .tab-selection-container::after {
-  content: '';
-  display: block;
-  width: 12rem;
-  height: 1rem;
-  background-color: #c4c4c4;
-  position: absolute;
-  -webkit-clip-path: polygon(0 0, 90% 0, 100% 100%, 0% 100%);
-  clip-path: polygon(0 0, 90% 0, 100% 100%, 0% 100%);
+	content: '';
+	display: block;
+	width: 12rem;
+	height: 1rem;
+	background-color: #c4c4c4;
+	position: absolute;
+	-webkit-clip-path: polygon(0 0, 90% 0, 100% 100%, 0% 100%);
+	clip-path: polygon(0 0, 90% 0, 100% 100%, 0% 100%);
 }
 
+/* .trolly-tab-selection {
+	position: relative;
+	width: 5rem;
+	height: 5rem;
+	display: inline-block;
+	margin: 0 5rem 2rem 0;
+	background-color: #fab84c;
+	padding: 1rem;
+	border-radius: 50%;
+	overflow: none;
+} */
 .trolly-tab-selection {
-  position: relative;
-  width: 5rem;
-  height: 5rem;
-  display: inline-block;
-  margin: 0 5rem 2rem 0;
-  background-color: #fab84c;
-  padding: 1rem;
-  border-radius: 50%;
-  overflow: none;
+	display: inline-block;
+	margin-right: 20px;
 }
 
+/* .lunch-tab-selection {
+	width: 5rem;
+	height: 5rem;
+	display: inline-block;
+	padding: 1rem;
+	margin: 0 0 2rem 0;
+	background-color: #fab84c;
+	border-radius: 50%;
+	overflow: none;
+} */
 .lunch-tab-selection {
-  width: 5rem;
-  height: 5rem;
-  display: inline-block;
-  padding: 1rem;
-  margin: 0 0 2rem 0;
-  background-color: #fab84c;
-  border-radius: 50%;
-  overflow: none;
+	display: inline-block;
 }
 .trolly-img {
-  width: 100%;
+	height: 60px;
+	width: 60px;
+	padding: 20px;
+	background-color: #fab84c;
+	border-radius: 50%;
+	display: inline-block;
 }
 
 @media (max-width: 600px) {
-  .main-container {
-    width: 90%;
-  }
-  .trolly-tab-selection {
-    width: 3rem;
-    height: 3rem;
-    margin: 0 2rem 2rem 0;
-  }
-  .lunch-tab-selection {
-    width: 3rem;
-    height: 3rem;
-  }
+	.main-container {
+		width: 90%;
+	}
+	.trolly-tab-selection {
+		width: 3rem;
+		height: 3rem;
+		margin: 0 2rem 2rem 0;
+	}
+	.lunch-tab-selection {
+		width: 3rem;
+		height: 3rem;
+	}
 }
 
 /* -----------------Delivery-Dashboard------------------ */
 
 .food-dashboard-rating-container {
-  position: absolute;
-  background-color: #3bb755;
-  top: 3rem;
-  width: 10rem;
-  height: 6rem;
-  border-radius: 0 1rem 1rem 0;
-  color: white;
+	position: absolute;
+	background-color: #3bb755;
+	top: 3rem;
+	width: 10rem;
+	height: 6rem;
+	border-radius: 0 1rem 1rem 0;
+	color: white;
 }
 
 .food-dashboard-offer-card {
-  background-color: #3bb755;
-  width: 25rem;
-  height: 8.5rem;
-  display: inline-block;
-  border-radius: 1rem;
-  color: white;
+	background-color: #3bb755;
+	width: 25rem;
+	height: 8.5rem;
+	display: inline-block;
+	border-radius: 1rem;
+	color: white;
 }
 
 .food-dashboard-offer-card-2 {
-  background-color: #e23744;
-  width: 25rem;
-  height: 8.5rem;
-  display: inline-block;
-  border-radius: 1rem;
-  color: white;
+	background-color: #e23744;
+	width: 25rem;
+	height: 8.5rem;
+	display: inline-block;
+	border-radius: 1rem;
+	color: white;
 }
 
 .food-dashboard-horizontal {
-  position: absolute;
-  left: 0.5rem;
-  -webkit-transform-origin: 0 0;
-  -ms-transform-origin: 0 0;
-  transform-origin: 0 0;
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  bottom: -2rem;
-  border-bottom: 0.1rem solid white;
+	position: absolute;
+	left: 0.5rem;
+	-webkit-transform-origin: 0 0;
+	-ms-transform-origin: 0 0;
+	transform-origin: 0 0;
+	-webkit-transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	transform: rotate(-90deg);
+	bottom: -2rem;
+	border-bottom: 0.1rem solid white;
 }
 
 .food-dashboard-rating-card-text {
-  padding: 0.5rem 0 0 4rem;
+	padding: 0.5rem 0 0 4rem;
 }
 
 .food-dashboard-items {
-  display: inline-block;
-  width: auto;
+	display: inline-block;
+	width: auto;
 }
 
 .food-dashboard-items-icon-1 {
-  color: white;
-  background-color: #e23744;
-  border-radius: 50%;
-  width: 2.2rem;
-  height: 2.2rem;
-  padding: 0.3rem;
-  margin-right: 0.5rem;
+	color: white;
+	background-color: #e23744;
+	border-radius: 50%;
+	width: 2.2rem;
+	height: 2.2rem;
+	padding: 0.3rem;
+	margin-right: 0.5rem;
 }
 
 .food-dashboard-items-icon-2 {
-  color: white;
-  background-color: #8cc8ff;
-  border-radius: 50%;
-  width: 2.5rem;
-  height: 2.5rem;
-  padding: 0.3rem;
-  margin-right: 0.5rem;
+	color: white;
+	background-color: #8cc8ff;
+	border-radius: 50%;
+	width: 2.5rem;
+	height: 2.5rem;
+	padding: 0.3rem;
+	margin-right: 0.5rem;
 }
 
 .food-dashboard-items-icon-3 {
-  color: white;
-  background-color: #3bb755;
-  border-radius: 50%;
-  width: 2.5rem;
-  height: 2.5rem;
-  padding: 0.3rem;
-  margin-right: 0.5rem;
+	color: white;
+	background-color: #3bb755;
+	border-radius: 50%;
+	width: 2.5rem;
+	height: 2.5rem;
+	padding: 0.3rem;
+	margin-right: 0.5rem;
 }
 
 .availability-selection-section {
-  border-radius: 5rem;
-  border: 0.2rem solid #e9e9e9;
-  padding: 2rem;
-  width: 70rem;
-  margin: auto;
-  color: #b6b6b6;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-box-shadow: 1px 1px 10px #e9e9e9;
-  box-shadow: 1px 1px 10px #e9e9e9;
+	border-radius: 5rem;
+	border: 0.2rem solid #e9e9e9;
+	padding: 2rem;
+	width: 70rem;
+	margin: auto;
+	color: #b6b6b6;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-ms-flex-pack: distribute;
+	justify-content: space-around;
+	-webkit-box-shadow: 1px 1px 10px #e9e9e9;
+	box-shadow: 1px 1px 10px #e9e9e9;
 }
 
 .cart-container {
-  -webkit-box-shadow: 1px 1px 10px #e9e9e9;
-  box-shadow: 1px 1px 10px #e9e9e9;
-  border-radius: 1rem;
+	-webkit-box-shadow: 1px 1px 10px #e9e9e9;
+	box-shadow: 1px 1px 10px #e9e9e9;
+	border-radius: 1rem;
 }
 
 .cart-container-inner-top {
-  border-bottom: 0.1rem solid black;
-  text-align: center;
+	border-bottom: 0.1rem solid black;
+	text-align: center;
 }
 
 .card-container-resturant {
-  height: 7rem;
+	height: 7rem;
 }
 
 .cart-container-inner-image {
-  background-color: grey;
-  width: 7rem;
-  height: 100%;
+	background-color: grey;
+	width: 7rem;
+	height: 100%;
 }
 
 .cart-btns {
-  width: 4rem;
-  height: 4rem;
-  border: none;
+	width: 4rem;
+	height: 4rem;
+	border: none;
 }
 
 .cart-icon {
-  color: white;
-  background-color: #fac05e;
-  width: 5rem;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  padding: 1rem;
-  border-radius: 50%;
+	color: white;
+	background-color: #fac05e;
+	width: 5rem;
+	height: -webkit-fit-content;
+	height: -moz-fit-content;
+	height: fit-content;
+	padding: 1rem;
+	border-radius: 50%;
 }
 
 .cart-btn-add {
-  color: #f7c12b;
-  background-color: rgba(247, 193, 43, 36%);
+	color: #f7c12b;
+	background-color: rgba(247, 193, 43, 36%);
 }
 
 .cart-btn-remove {
-  color: #999999;
-  background-color: #eeeeee;
+	color: #999999;
+	background-color: #eeeeee;
 }
 
 .mainmenu-card-container {
-  height: 50rem;
-  width: 40rem;
-  -webkit-box-shadow: 1px 1px 10px #e9e9e9;
-  box-shadow: 1px 1px 10px #e9e9e9;
-  border-radius: 1rem;
+	height: 50rem;
+	width: 40rem;
+	-webkit-box-shadow: 1px 1px 10px #e9e9e9;
+	box-shadow: 1px 1px 10px #e9e9e9;
+	border-radius: 1rem;
 }
 
 .mainmenu-card-container-img {
-  width: 100%;
-  border-radius: 1rem;
+	width: 100%;
+	border-radius: 1rem;
 }
 
 .food-item-addbtn {
-  background-color: #e23744;
-  color: white;
-  border: none;
-  width: 12rem;
-  height: 5rem;
-  border-radius: 1rem;
+	background-color: #e23744;
+	color: white;
+	border: none;
+	width: 12rem;
+	height: 5rem;
+	border-radius: 1rem;
 }
 
 /* -------------Login-------------------- */
 
 .login-container-left {
-  height: 100vh;
-  background-color: #fab84c;
-  padding: 2.5rem;
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+	height: 100vh;
+	background-color: #fab84c;
+	padding: 2.5rem;
+	-webkit-box-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
 }
 
 .login-container-right {
-  height: 100vh;
-  padding: 2.5rem;
-  text-align: center;
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+	height: 100vh;
+	padding: 2.5rem;
+	text-align: center;
+	-webkit-box-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
 }
 
 .login-container-right button {
-  color: #000;
+	color: #000;
 }
 
 .login-tab-btn-S {
-  width: 15rem;
-  height: 3rem;
-  border: none;
+	width: 15rem;
+	height: 3rem;
+	border: none;
 }
 .login-tab-btn {
-  width: 15rem;
-  height: 3rem;
+	width: 15rem;
+	height: 3rem;
 }
 .active-log-sign {
-  border: none;
-  background: none;
-  border-top: 0.2rem solid #fac05e;
+	border: none;
+	background: none;
+	border-top: 0.2rem solid #fac05e;
 }
 
 .signup-tab-btn-L {
-  width: 15rem;
-  height: 3rem;
-  border: none;
+	width: 15rem;
+	height: 3rem;
+	border: none;
 }
 .signup-tab-btn-S {
-  width: 15rem;
-  height: 3rem;
+	width: 15rem;
+	height: 3rem;
 }
 .signUp-display-btn {
-  margin-bottom: 4rem;
+	margin-bottom: 4rem;
 }
 
 .login-form-container {
-  width: 80%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+	width: 80%;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
 }
 
 .login-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-  width: 100%;
-  margin: 1rem 0 !important;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	position: relative;
+	width: 100%;
+	margin: 1rem 0 !important;
 }
 
 .login-input,
 .login-input-S {
-  border: 0.1rem solid #fab84c;
-  height: 3rem;
-  width: 85%;
-  outline: none;
-  padding: 0 1rem;
+	border: 0.1rem solid #fab84c;
+	height: 3rem;
+	width: 85%;
+	outline: none;
+	padding: 0 1rem;
 }
 .login-input-S {
-  margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
 .login-input-btn {
-  position: absolute;
-  right: 0;
-  height: 100%;
-  width: 2rem;
-  background: #fab84c;
-  border: none;
-  border-left: 0.1rem solid #fab84c;
-  color: white;
-  margin-left: 5px;
+	position: absolute;
+	right: 0;
+	height: 100%;
+	width: 2rem;
+	background: #fab84c;
+	border: none;
+	border-left: 0.1rem solid #fab84c;
+	color: white;
+	margin-left: 5px;
 }
 .login-input-btn-S {
-  width: 100%;
-  padding: 1rem 4rem;
-  background: #fab84c;
-  border: none;
-  border-left: 0.1rem solid #fab84c;
-  color: white;
+	width: 100%;
+	padding: 1rem 4rem;
+	background: #fab84c;
+	border: none;
+	border-left: 0.1rem solid #fab84c;
+	color: white;
 }
 
 .login-input-select {
-  outline: none;
-  border: none;
-  background: none;
-  padding: 0 1rem;
-  border: 0.1rem solid #fab84c;
+	outline: none;
+	border: none;
+	background: none;
+	padding: 0 1rem;
+	border: 0.1rem solid #fab84c;
 
-  height: 3rem;
+	height: 3rem;
 }
 .login-input-select-S {
-  outline: none;
-  border: none;
-  background: none;
-  padding: 0 1rem;
-  border: 0.1rem solid #fab84c;
-  border-right: 0;
-  height: 3rem;
+	outline: none;
+	border: none;
+	background: none;
+	padding: 0 1rem;
+	border: 0.1rem solid #fab84c;
+	border-right: 0;
+	height: 3rem;
 }
 
 .google-tab-btn {
-  width: 20rem;
-  height: 2.5rem;
-  border: none;
-  -webkit-box-shadow: 0px 1px 5px 1px #e0e0e0;
-  box-shadow: 0px 1px 5px 1px #e0e0e0;
-  background: none;
+	width: 20rem;
+	height: 2.5rem;
+	border: none;
+	-webkit-box-shadow: 0px 1px 5px 1px #e0e0e0;
+	box-shadow: 0px 1px 5px 1px #e0e0e0;
+	background: none;
 }
 
 .facebook-tab-btn {
-  width: 20rem;
-  height: 2.5rem;
-  border: none;
-  -webkit-box-shadow: 0px 1px 5px 1px #e0e0e0;
-  box-shadow: 0px 1px 5px 1px #e0e0e0;
-  background: none;
+	width: 20rem;
+	height: 2.5rem;
+	border: none;
+	-webkit-box-shadow: 0px 1px 5px 1px #e0e0e0;
+	box-shadow: 0px 1px 5px 1px #e0e0e0;
+	background: none;
 }
 
 .email-tab-btn {
-  width: 20rem;
-  height: 2.5rem;
-  border: none;
-  -webkit-box-shadow: 0px 1px 5px 1px #e0e0e0;
-  box-shadow: 0px 1px 5px 1px #e0e0e0;
-  background: none;
+	width: 20rem;
+	height: 2.5rem;
+	border: none;
+	-webkit-box-shadow: 0px 1px 5px 1px #e0e0e0;
+	box-shadow: 0px 1px 5px 1px #e0e0e0;
+	background: none;
 }
 
 .login-or-dash {
-  width: 15rem;
-  height: 0.1rem;
-  border-top: 0.01rem solid #999999;
+	width: 15rem;
+	height: 0.1rem;
+	border-top: 0.01rem solid #999999;
 }
 
 .login-icons {
-  height: 1.5rem;
-  -ms-flex-item-align: start;
-  align-self: flex-start;
+	height: 1.5rem;
+	-ms-flex-item-align: start;
+	align-self: flex-start;
 }
 
 @media (max-width: 960px) {
-  .login-container-left {
-    display: none !important;
-  }
+	.login-container-left {
+		display: none !important;
+	}
 
-  .login-container-right {
-    margin: 0;
-    padding: 0.5rem;
-  }
+	.login-container-right {
+		margin: 0;
+		padding: 0.5rem;
+	}
 
-  .login-container-right img {
-    width: 50%;
-  }
+	.login-container-right img {
+		width: 50%;
+	}
 
-  .login-form {
-    width: 100%;
-    overflow: hidden;
-    margin: 1rem 0 !important;
-  }
+	.login-form {
+		width: 100%;
+		overflow: hidden;
+		margin: 1rem 0 !important;
+	}
 
-  .login-input-select {
-    border-right: 0.1rem solid #fac05e;
-    margin-bottom: 0;
-    height: 2rem;
-  }
+	.login-input-select {
+		border-right: 0.1rem solid #fac05e;
+		margin-bottom: 0;
+		height: 2rem;
+	}
 
-  .login-input {
-    height: 2rem;
-    width: 80%;
-  }
+	.login-input {
+		height: 2rem;
+		width: 80%;
+	}
 
-  .login-form-container {
-    width: 80%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
+	.login-form-container {
+		width: 80%;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
+		flex-direction: column;
+	}
 
-  .google-tab-btn {
-    width: 60%;
-    height: 2rem;
-  }
+	.google-tab-btn {
+		width: 60%;
+		height: 2rem;
+	}
 
-  .google-tab-btn p,
-  .email-tab-btn p {
-    font-size: 1rem;
-    margin: 0;
-  }
+	.google-tab-btn p,
+	.email-tab-btn p {
+		font-size: 1rem;
+		margin: 0;
+	}
 
-  .login-icons {
-    height: 1rem !important;
-    width: 1rem !important;
-  }
+	.login-icons {
+		height: 1rem !important;
+		width: 1rem !important;
+	}
 
-  .email-tab-btn {
-    width: 60%;
-    height: 2rem;
-  }
+	.email-tab-btn {
+		width: 60%;
+		height: 2rem;
+	}
 
-  .email-tab-btn + p {
-    font-size: 0.8rem;
-    text-align: center;
-    padding: 1rem;
-  }
+	.email-tab-btn + p {
+		font-size: 0.8rem;
+		text-align: center;
+		padding: 1rem;
+	}
 }
